Trick nameservers form to always return a minimum of 3 fields

--- a/src/registrar/templates/domain_nameservers.html
+++ b/src/registrar/templates/domain_nameservers.html
@@ -40,11 +40,11 @@
       </svg><span class="margin-left-05">Add another name server</span>
     </button>
 
-
     <button
           type="submit"
           class="usa-button"
-      >Save</button>
-    </form>
+      >Save
+    </button>
+  </form>
 
 {% endblock %}  {# domain_content #}
