--- a/src/registrar/templates/django/admin/domain_change_form.html
+++ b/src/registrar/templates/django/admin/domain_change_form.html
@@ -8,7 +8,7 @@
 
 {% block field_sets %}
     <div class="submit-row">
-        {% if original.state == original.State.READY or original.state == original.State.UNKNOWN %}
+        {% if original.state == original.State.READY %}
           <input type="submit" value="Place hold" name="_place_client_hold">
         {% elif original.state == original.State.ON_HOLD %}
           <input type="submit" value="Remove hold" name="_remove_client_hold">
