--- a/src/registrar/templates/home.html
+++ b/src/registrar/templates/home.html
@@ -39,7 +39,7 @@
           </th>
           <td data-sort-value="{{ domain.created_time|date:"U" }}" data-label="Date created">{{ domain.created_time|date }}</td>
           <td data-label="Status">
-            {% if domain.state == "unknown" or domain.state == 'dns needed'%}
+            {% if domain.state == "unknown" or domain.state == "dns needed"%}
                 DNS Needed
             {% else %}
                 {{ domain.state|title }}
