--- a/src/registrar/templates/home.html
+++ b/src/registrar/templates/home.html
@@ -40,6 +40,9 @@
             {{ domain.name }}
           </th>
           <td data-sort-value="{{ domain.created_time|date:"U" }}" data-label="Date created">{{ domain.created_time|date }}</td>
+          {% comment %} Should this be domain.status? 
+          <td data-label="Status">{{ domain.status|title }}</td>
+          {% endcomment %}
           <td data-label="Status">{{ domain.application_status|title }}</td>
           <td>
             <a href="{% url "domain" pk=domain.pk %}">
