roughed in subdomains

--- a/src/registrar/templates/domain_dns.html
+++ b/src/registrar/templates/domain_dns.html
@@ -14,7 +14,8 @@
   {% url 'domain-nameservers' pk=domain.id as url %}
   <p><a href="{{ url }}">DNS name servers</a></p>
 
-  <p><a href=>Subdomain records</a></p>
+  {% url 'domain-subdomains' pk=domain.id as url %}
+  <p><a href="{{ url }}">Subdomain records</a></p>
 
   {% url 'domain-dnssec' pk=domain.id as url %}
   <p><a href="{{ url }}">DNSSEC</a></p>
