--- a/src/registrar/templates/domain_dsdata.html
+++ b/src/registrar/templates/domain_dsdata.html
@@ -7,4 +7,40 @@
 
   <h1>DS Data</h1>
 
+  {% include "includes/required_fields.html" %}
+
+  <form class="usa-form usa-form--large" method="post" novalidate id="form-container">
+    {% csrf_token %}
+    {{ formset.management_form }}
+
+    {% for form in formset %}
+    <div class="server-form">
+    {% with attr_required=True %}
+      {% input_with_errors form.key_tag %}
+    {% endwith %}
+    {% with attr_required=True %}
+      {% input_with_errors form.algorithm %}
+    {% endwith %}
+    {% with attr_required=True %}
+      {% input_with_errors form.digest_type %}
+    {% endwith %}
+    {% with attr_required=True %}
+      {% input_with_errors form.digest %}
+    {% endwith %}
+    </div>
+    {% endfor %}
+
+    <button type="button" class="usa-button usa-button--unstyled display-block" id="add-form">
+      <svg class="usa-icon" aria-hidden="true" focusable="false" role="img" width="24" height="24">
+        <use xlink:href="{%static 'img/sprite.svg'%}#add_circle"></use>
+      </svg><span class="margin-left-05">Add new record</span>
+    </button>
+
+    <button
+          type="submit"
+          class="usa-button"
+      >Save
+    </button>
+  </form>
+
 {% endblock %}  {# domain_content #}
