--- a/src/registrar/templates/domain_dsdata.html
+++ b/src/registrar/templates/domain_dsdata.html
@@ -38,7 +38,7 @@
 
       <legend>DS Data record {{forloop.counter}}</legend>
 
-      <div class="grid-row grid-gap-2">
+      <div class="grid-row grid-gap-2 flex-end">
         <div class="tablet:grid-col-4">
           {% with attr_required=True %}
             {% input_with_errors form.key_tag %}
