--- a/src/registrar/templates/domain_detail.html
+++ b/src/registrar/templates/domain_detail.html
@@ -49,7 +49,7 @@
     {% if security_email is not None and security_email != "dotgov@cisa.dhs.gov"%}
       {% include "includes/summary_item.html" with title='Security email' value=security_email edit_link=url %}
     {% else %}
-      {% include "includes/summary_item.html" with title='Security email' value=None edit_link=url %}
+      {% include "includes/summary_item.html" with title='Security email' value='None provided' edit_link=url %}
     {% endif %}
     {% url 'domain-users' pk=domain.id as url %}
     {% include "includes/summary_item.html" with title='User management' users='true' list=True value=domain.permissions.all edit_link=url %}
