--- a/src/registrar/assets/sass/_theme/_forms.scss
+++ b/src/registrar/assets/sass/_theme/_forms.scss
@@ -13,3 +13,9 @@
     height: units('mobile');
   }
 }
+
+.usa-form-group--unstyled-error {
+  margin-left: 0;
+  padding-left: 0;
+  border-left: none;
+}
