--- a/src/registrar/templates/domain_dnssec.html
+++ b/src/registrar/templates/domain_dnssec.html
@@ -30,7 +30,7 @@
       <a href="{% url 'domain-dns-dnssec-keydata' pk=domain.id %}" class="usa-button usa-button--outline">Add Key Data</a>
       <button
         type="submit"
-        class="usa-button"
+        class="usa-button usa-button--unstyled"
         name="cancel"
     >Cancel</button>
     </p>
