--- a/src/registrar/templates/domain_dsdata.html
+++ b/src/registrar/templates/domain_dsdata.html
@@ -27,6 +27,8 @@
         >Add DS Data record</button>
     </form>
   {% else %}
+
+  <p>Enter the values given by your DNS provider for DS Data.</p>
   {% include "includes/required_fields.html" %}
 
   <form class="usa-form usa-form--extra-large" method="post" novalidate id="form-container">
@@ -36,21 +38,23 @@
     {% for form in formset %}
     <fieldset class="ds-record">
 
-      <legend>DS Data record {{forloop.counter}}</legend>
+      <legend class="sr-only">DS Data record {{forloop.counter}}</legend>
+
+      <h2 class="margin-top-0">DS Data record {{forloop.counter}}</h2>
 
       <div class="grid-row grid-gap-2 flex-end">
         <div class="tablet:grid-col-4">
-          {% with attr_required=True %}
+          {% with attr_required=True add_group_class="usa-form-group--unstyled-error" %}
             {% input_with_errors form.key_tag %}
           {% endwith %}
         </div>
         <div class="tablet:grid-col-4">
-          {% with attr_required=True %}
+          {% with attr_required=True add_group_class="usa-form-group--unstyled-error" %}
             {% input_with_errors form.algorithm %}
           {% endwith %}
         </div>
         <div class="tablet:grid-col-4">
-          {% with attr_required=True %}
+          {% with attr_required=True add_group_class="usa-form-group--unstyled-error" %}
             {% input_with_errors form.digest_type %}
           {% endwith %}
         </div>
@@ -58,7 +62,7 @@
 
       <div class="grid-row">
         <div class="grid-col">
-          {% with attr_required=True %}
+          {% with attr_required=True add_group_class="usa-form-group--unstyled-error" %}
             {% input_with_errors form.digest %}
           {% endwith %}
         </div>
@@ -66,9 +70,9 @@
 
       <div class="grid-row margin-top-2">
         <div class="grid-col">
-          {% with add_group_class="float-right-tablet" %}
+          {% comment %} {% with add_group_class="float-right-tablet" %}
             {% input_with_errors form.delete %}
-          {% endwith %}
+          {% endwith %} {% endcomment %}
         </div>
       </div>
 
