--- a/src/registrar/templates/domain_keydata.html
+++ b/src/registrar/templates/domain_keydata.html
@@ -27,6 +27,8 @@
         >Add DS Key record</button>
     </form>
   {% else %}
+
+  <p>Enter the values given by your DNS provider for DS Key Data.</p>
   {% include "includes/required_fields.html" %}
 
   <form class="usa-form usa-form--extra-large" method="post" novalidate id="form-container">
@@ -34,23 +36,25 @@
     {{ formset.management_form }}
 
     {% for form in formset %}
-    <fieldset class="key-record">
+    <fieldset class="ds-record">
 
-      <legend>Key Data record {{forloop.counter}}</legend>
+      <legend class="sr-only">Key Data record {{forloop.counter}}</legend>
+
+      <h2 class="margin-top-0">DS Data record {{forloop.counter}}</h2>
 
       <div class="grid-row grid-gap-2 flex-end">
         <div class="tablet:grid-col-4">
-          {% with attr_required=True %}
+          {% with attr_required=True add_group_class="usa-form-group--unstyled-error" %}
             {% input_with_errors form.flag %}
           {% endwith %}
         </div>
         <div class="tablet:grid-col-4">
-          {% with attr_required=True %}
+          {% with attr_required=True add_group_class="usa-form-group--unstyled-error" %}
             {% input_with_errors form.protocol %}
           {% endwith %}
         </div>
         <div class="tablet:grid-col-4">
-          {% with attr_required=True %}
+          {% with attr_required=True add_group_class="usa-form-group--unstyled-error" %}
             {% input_with_errors form.algorithm %}
           {% endwith %}
         </div>
@@ -59,16 +63,16 @@
       <div class="grid-row">
         <div class="grid-col">
           {% with attr_required=True %}
-            {% input_with_errors form.pub_key %}
+            {% input_with_errors form.pub_key add_group_class="usa-form-group--unstyled-error" %}
           {% endwith %}
         </div>
       </div>
 
       <div class="grid-row margin-top-2">
         <div class="grid-col">
-          {% with add_group_class="float-right-tablet" %}
+          {% comment %} {% with add_group_class="float-right-tablet" %}
             {% input_with_errors form.delete %}
-          {% endwith %}
+          {% endwith %} {% endcomment %}
         </div>
       </div>
 
