--- a/src/registrar/templates/domain_dsdata.html
+++ b/src/registrar/templates/domain_dsdata.html
@@ -68,21 +68,32 @@
         </div>
       </div>
 
-      <div class="grid-row margin-top-2">
+      <div class="grid-row margin-top-1">
         <div class="grid-col">
           {% comment %} {% with add_group_class="float-right-tablet" %}
             {% input_with_errors form.delete %}
           {% endwith %} {% endcomment %}
+          <button type="button" class="usa-button usa-button--unstyled display-block float-right-tablet delete-record">
+            <svg class="usa-icon" aria-hidden="true" focusable="false" role="img" width="24" height="24">
+              <use xlink:href="{%static 'img/sprite.svg'%}#delete"></use>
+            </svg><span class="margin-left-05">Delete</span>
+          </button>
         </div>
       </div>
 
     </fieldset>
     {% endfor %}
 
-    <button type="button" class="usa-button usa-button--unstyled display-block" id="add-form2">
+    <button type="button" class="usa-button usa-button--unstyled display-block" id="add-ds-form">
       <svg class="usa-icon" aria-hidden="true" focusable="false" role="img" width="24" height="24">
         <use xlink:href="{%static 'img/sprite.svg'%}#add_circle"></use>
       </svg><span class="margin-left-05">Add new record</span>
+    </button>
+
+    <button
+          type="button"
+          class="usa-button usa-button--outline btn-cancel"
+      >Cancel
     </button>
 
     <button
