refactor cancel to work from the backend, clean up bud with delete init

--- a/src/registrar/assets/sass/_theme/_buttons.scss
+++ b/src/registrar/assets/sass/_theme/_buttons.scss
@@ -81,14 +81,21 @@ a.usa-button--unstyled:visited {
   color: color('primary');
 }
   
-  .dotgov-button--green {
-    background-color: color('success-dark');
-  
-    &:hover {
-      background-color: color('success-darker');
-    }
-  
-    &:active {
-      background-color: color('green-80v');
-    }
+.dotgov-button--green {
+  background-color: color('success-dark');
+
+  &:hover {
+    background-color: color('success-darker');
   }
+
+  &:active {
+    background-color: color('green-80v');
+  }
+}
+
+// WARNING: crazy hack ahead
+.btn-cancel {
+  position: relative;
+  top: -39.2px;
+  left: 88px;
+}
