refactor JS to rvise the indicies used in id, for and names on elements in DS records after deleting, revise post logic when extension to be passed is empty to pass {} to the setter

--- a/src/registrar/templates/domain_keydata.html
+++ b/src/registrar/templates/domain_keydata.html
@@ -91,15 +91,19 @@
     </button>
 
     <button
-          type="button"
-          class="usa-button usa-button--outline btn-cancel"
-      >Cancel
-    </button>
-
-    <button
           type="submit"
           class="usa-button"
       >Save
+    </button>
+  </form>
+
+  <form aria-label="form to undo changes to the DS records">
+    <button
+          type="submit"
+          class="usa-button usa-button--outline btn-cancel"
+          name="btn-cancel-click"
+          aria-label="Reset the data in the DS records to the registry state (undo changes)"
+      >Cancel
     </button>
   </form>
   {% endif %}
