Rename Domain Nameservers page title

--- a/src/registrar/templates/domain_nameservers.html
+++ b/src/registrar/templates/domain_nameservers.html
@@ -9,7 +9,7 @@
     {% include "includes/form_errors.html" with form=form %}
   {% endfor %}
 
-  <h1>Domain name servers</h1>
+  <h1>DNS name servers</h1>
 
   <p>Before your domain can be used we'll need information about your domain
   name servers.</p>
