--- a/src/registrar/templates/domain_your_contact_information.html
+++ b/src/registrar/templates/domain_your_contact_information.html
@@ -1,7 +1,7 @@
 {% extends "domain_base.html" %}
 {% load static field_helpers %}
 
-{% block title %}Domain contact information | {{ domain.name }} | {% endblock %}
+{% block title %}Your contact information | {{ domain.name }} | {% endblock %}
 
 {% block domain_content %}
 
